--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tochka-test",
+  "name": "cryptopay-test",
   "version": "1.0.0",
-  "description": "Tochka Bank Test",
+  "description": "Cryptopay Test",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
